--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Your Name - Personal Website</title>
+    <title>Emac07</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Website</h1>
+        <h1>ls -a</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -28,7 +28,7 @@
         <!-- Add more sections for different content -->
     </main>
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2023 Emmett MacDonald</p>
     </footer>
 </body>
 </html>
