--- a/index.html
+++ b/index.html
@@ -7,28 +7,10 @@
 </head>
 <body>
     <header>
-        <h1>ls -a</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pgp.html">PGP Key</a></li>
-                <!-- Add more pages if needed -->
-            </ul>
-        </nav>
+        <h1>d</h1>
+        <h2>$ ls -l</h2>
+        <li>drwxr-xr-x 1 Emac07 Emac07  300 Dec 16 01:42 <a href="pgp.html" target="_blank" rel="nofollow">pgp</a>/</li>
+        <li>drwxr-xr-x 1 Emac07 Emac07  32k Dec 13 01:42 <a href="about.html" target="_blank" rel="nofollow">about</a>/</li>
     </header>
-    <main>
-        <section>
-            <h2>About Me</h2>
-            <p>Add information about yourself here.</p>
-        </section>
-        <section>
-            <h2>Projects</h2>
-            <p>Add details about your projects here.</p>
-        </section>
-        <!-- Add more sections for different content -->
-    </main>
-    <footer>
-        <p>&copy; 2023 Emmett MacDonald</p>
-    </footer>
 </body>
 </html>
