--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Emac07</title>
-    <link rel="stylesheet" href="body.css">
+    <link rel="stylesheet" href="body.scss">
 </head>
 <body>
     <header>
