--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <header>
-        <h1>d</h1>
-        <h2>$ ls -l</h2>
-        <li>drwxr-xr-x 1 Emac07 Emac07  300 Dec 16 01:42 <a href="pgp.html" target="_blank" rel="nofollow">pgp</a>/</li>
-        <li>drwxr-xr-x 1 Emac07 Emac07  32k Dec 13 01:42 <a href="about.html" target="_blank" rel="nofollow">about</a>/</li>
+        <ul class="ls">
+            <li>$ ls -l</li>
+            <li>drwxr-xr-x 1 Emac07 Emac07  300 Dec 16 01:42 <a href="pgp.html" target="_blank" rel="nofollow">pgp</a>/</li>
+            <li>drwxr-xr-x 1 Emac07 Emac07  32k Dec 13 01:42 <a href="about.html" target="_blank" rel="nofollow">about</a>/</li>
+        </ul>
     </header>
 </body>
 </html>
