--- a/pgp.html
+++ b/pgp.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <pre><output>
-cat public_key.asc
+$ cat public_key.asc
 -----BEGIN PGP PUBLIC KEY BLOCK-----
     
 mDMEZYV4ohYJKwYBBAHaRw8BAQdAlhcVSDKigb1s96l1HNhoDs8HYi+bIoTE2rTM
