--- a/pgp.html
+++ b/pgp.html
@@ -21,5 +21,12 @@ RBQwwGm7hcKE2A64OARlhXiiEgorBgEEAZdVAQUBAQdApZsI8HSlIm3qrNJ+R+vY
 =xVgY
 -----END PGP PUBLIC KEY BLOCK-----
 </output></pre>
-    
-    
+</head>
+<body>
+    <header>
+        <ul class="ls">
+            <li>$ cd <a href="index.html" target="_blank" rel="nofollow">..</a></li>
+        </ul>
+    </header>
+</body>
+</html>
