--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@ LICENSE
 <body>
     <header>
         <ul class="ls">
-            <li>$ cd <a href="index.html" target="_blank" rel="nofollow">..</a></li>
+            <li>$ cd <a href="index.html">..</a></li>
         </ul>
     </header>
 </body>
