--- a/pgp.html
+++ b/pgp.html
@@ -25,7 +25,7 @@ RBQwwGm7hcKE2A64OARlhXiiEgorBgEEAZdVAQUBAQdApZsI8HSlIm3qrNJ+R+vY
 <body>
     <header>
         <ul class="ls">
-            <li>$ cd <a href="index.html" target="_blank" rel="nofollow">..</a></li>
+            <li>$ cd <a href="index.html">..</a></li>
         </ul>
     </header>
 </body>
