--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Emac07</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
         <style>
             body {
                 overflow-y: scroll; /* Enable vertical scrollbar for the whole page */
@@ -61,7 +61,7 @@ LICENSE
 <body>
     <header>
         <ul class="ls">
-            <li>$ cd <a href="index.html">..</a></li>
+            <li>$ cd <a href="../index.html">..</a></li>
         </ul>
     </header>
 </body>
