--- a/pages/pgp.html
+++ b/pages/pgp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Emac07</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <pre><output>
 $ cat public_key.asc
@@ -25,7 +25,7 @@ RBQwwGm7hcKE2A64OARlhXiiEgorBgEEAZdVAQUBAQdApZsI8HSlIm3qrNJ+R+vY
 <body>
     <header>
         <ul class="ls">
-            <li>$ cd <a href="index.html">..</a></li>
+            <li>$ cd <a href="../index.html">..</a></li>
         </ul>
     </header>
 </body>
