--- a/pages/about.html
+++ b/pages/about.html
@@ -7,8 +7,7 @@
         <link rel="stylesheet" href="../style.css">
         <style>
             body {
-                overflow-y: scroll; /* Enable vertical scrollbar for the whole page */
-            }
+                overflow-y: scroll;}
         </style>
         <pre><output>
 $ man about
@@ -53,8 +52,10 @@ REPORTING BUGS
        No need.
 
 LICENSE
-       This is free software: you are free to change and redistribute it. There is NO WARRANTY, to the extent permitted by law.
-       Released under the GNU General Public License version 3 or later; see <https://www.gnu.org/licenses/gpl-3.0.html> for details.
+       This is free software: you are free to change and redistribute it.
+       There is NO WARRANTY, to the extent permitted by law.
+       Released under the GNU General Public License version 3 or later;
+       see <https://www.gnu.org/licenses/gpl-3.0.html> for details.
 
 </output></pre>
 </head>
