--- a/pages/about.html
+++ b/pages/about.html
@@ -46,7 +46,7 @@ SEE ALSO
        rust(1), lisp(1), java(1), c(1),
 
 AUTHOR
-       Emmett MacDonald emacdonald23@simons-rock.edu / macdonaldaemmett@gmail.com
+       Emmett MacDonald macdonaldaemmett@gmail.com
 
 REPORTING BUGS
        No need.
