--- a/pages/pgp.html
+++ b/pages/pgp.html
@@ -7,7 +7,19 @@
 </head>
 <pre><output>
 $ cat public_key.asc
+-----BEGIN PGP PUBLIC KEY BLOCK-----
 
+mDMEZYpxYBYJKwYBBAHaRw8BAQdA7u9ETPVqsIsnRQNyMKX6V/RA7GOAnhwsECSE
+vOymOPS0BmVtYWMwN4iTBBMWCgA7FiEEhKNKFzCPfMcCWcvTyj6xz0QhB3AFAmWK
+cWACGwMFCwkIBwICIgIGFQoJCAsCBBYCAwECHgcCF4AACgkQyj6xz0QhB3AESAEA
+w+BSVPWn0eHF1ZPMTaDK5zZHt6WesRrXKFxMwzqnPIMBANQtCreUCAHt/uvwUjCI
+3obo+Fn3F7CyuBSEdYuvXjYJuDgEZYpxYBIKKwYBBAGXVQEFAQEHQITGRTABimqe
+XRfwe3d4XU8dMnnQC1WMKHo1OJWwzxUGAwEIB4h4BBgWCgAgFiEEhKNKFzCPfMcC
+WcvTyj6xz0QhB3AFAmWKcWACGwwACgkQyj6xz0QhB3B+ugEAi9DB+Rd595FrIJwP
+VpSnxRm3WjGHzaOESRrAZI8qCPMA/3yF6idA9Kk2hrG6u4GNN4EMZ+1pNrbqg78A
+OlrZve0J
+=THzb
+-----END PGP PUBLIC KEY BLOCK-----
 </output></pre>
 </head>
 <body>
